updated js for course blogs index page to have header fix in place when scrolling and index to scroll behind it

--- a/sites/all/themes/tmpltzr/css/html-elements.css
+++ b/sites/all/themes/tmpltzr/css/html-elements.css
@@ -461,7 +461,7 @@ dl dd {
 	color:#FF555A;
 }
 
-#tmpltzr .other, #tmpltzr .other a {
+#tmpltzr .other, #tmpltzr .other a, #tmpltzr a.gray {
 	color:gray;
 }
 
@@ -859,7 +859,22 @@ dl dd {
 	padding-bottom:35px;
 	border-bottom:1px solid black;
 	margin-bottom:45px;
+	position:relative;
+	background-color:white;
+	z-index:1000;
 }
+
+#tmpltzr #fixed-header.fix-header{
+	position:fixed;
+	top:20px;
+	left:460px;
+	margin-top: -90px;
+}
+
+#tmpltzr #course-blogs-index-listing {
+	position:relative;
+	top:0;
+}	
 
 #tmpltzr #program-list, #tmpltzr #region-list {
 	width:250px;
@@ -1038,9 +1053,12 @@ dl dd {
 	margin-bottom: 25px;
 }
 
+#tmpltzr .view-courseblogs {
+	margin-bottom:60px;
+}
 #tmpltzr .view-courseblogs .views-row{
 	float:none !important;
-	
+	margin-bottom:10px;
 }
 #tmpltzr .view-courseblogs .col{
 	width:230px;
@@ -1049,6 +1067,12 @@ dl dd {
 	vertical-align:top;
 }
 
+#tmpltzr .view-courseblogs .views-row a{
+	border:none;
+}
+#tmpltzr .view-courseblogs .views-row a:hover{
+	border-bottom:1px solid;
+}
 
 
 /* end custom event widget styles */
